# llama-hack

./: .devcontainer.json  .env  Dockerfile  add_watermark.py  generate_images.py  get_recipe_and_shopping_list.py  main.py  package-lock.json  package.json  products.json  prompts.py  pyproject.toml  tailwind.config.js  vite.config.ts
.devcontainer/: post_create_commands.sh
data/: process_data.py  tesco_fresh_foods_partial.csv  tesco_fresh_foods_with_simple_names.csv  tesco_products_discounted.csv  tesco_products_final.csv  tesco_products_sorted.csv
public/supermarket-logos/: fake_recipes.json
results/: meal_plan.json  savings_analysis.csv
src/: App.tsx  index.css  types.ts
src/components/: Basket.tsx  ChatBot.tsx  DietaryPreferences.tsx  FilterControls.tsx  Header.tsx  IngredientOriginMap.tsx  IngredientsPopup.tsx  LoadingSpinner.tsx  RecipeCard.tsx  RecipeDetails.tsx  SidebarPrompts.tsx  SupermarketPriceComparison.tsx
src/contexts/: BasketContext.tsx  BookmarkContext.tsx
src/data/: mockData.ts
src/pages/: BookmarkedRecipes.tsx  LandingPage.tsx
src/services/: recipeService.ts
